--- a/index.css
+++ b/index.css
@@ -226,7 +226,7 @@ padding: 40px;
 
 .nikoruta{
   width:100%;
-  height:590px;
+  max-height:600px;
   background-color: white;
   border-radius: 20%;
   margin-top:50px;
@@ -236,7 +236,7 @@ padding: 40px;
 
 .ryanruta{
   width:100%;
-  height:590px;
+  max-height:600px;
   background-color: white;
   border-radius: 20%;
   margin-top:50px;
